package pt.ipp.isep.dei.esoft.project.domain;

import pt.ipp.isep.dei.esoft.project.tools.Status;

public class Task {

    private String title;
    private String description;
    private Status status;






}
