@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Organization {
    name
    nif
    website
    phoneNumber
    email
}

class Skill{
    name
    description
}

class Collaborator{
    name
    admissionDate
    birthDate
    phoneNumber
    email
    idDocType
    idDocNumber
}

class Job{
    name
}

class HRM{

}

class FM{

}

class Team{
    name
    description
    members
    status
}

class Vehicle{
    plateId
    brand
    model
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    checkupFrequencyKms
}

class Checkup{
    date
    checkupKms
}

class GreenSpace{
    name
    address
    type
    description
}

class Address{
    street
    streetNumber
    postalCode
    city
    district
}

class Task{
    title
    duration
    status
    priority
}

class UserPortal{
    name
    url
}

class Comment{
    text
    date
    author
}

Organization "1" -- "*" Task : "owns >"
Organization "1" -- "1" Agenda : "owns >"
Organization "1" -- "*" Address : "is located at >"
Organization "1" -- "1..*" UserPortal : "owns >"
Organization "1" -- "*" GreenSpace : "manages >"
Organization "1" -- "*" Skill : "owns >"
Organization "1" -- "*" Job : "owns >"
Organization "1" -- "*" Collaborator : "has >"
Organization "1" -- "*" Vehicle : "owns >"
Collaborator "1" -- "*" Skill : "has >"
Collaborator "1" -- "*" Address : "lives in >"
Collaborator "1" -- "1" Job : "has >"
HRM "1" -- "*" Skill : "register >"
HRM "1" -- "*" Job : "register >"
HRM "1" -- "*" Collaborator : "register >"
HRM "1" -- "*" Collaborator : "assigns skills to >"
HRM "1" -- "*" Team : "generates >"
FM "1" -- "*" Vehicle : "registers >"
FM "1" -- "*" Vehicle : "lists needing check-up >"
FM "1" -- "*" Checkup : "registers >"
UserPortal "1" -- "*" Comment : "has >"
Agenda "1" -- "*" Task : "has >"
Task "*" -- "1" Team : "is carried out by >"
GreenSpace "1" -- "*" Address : "is located at >"
Team "1" -- "*" Collaborator : "has >"
Vehicle "1" -- "*" Checkup : "does >"

@enduml